# Reflexion_Agent

./: .gitignore  config.yaml  pyproject.toml
docs/: INITIAL_DESIGN_PLAN.md
scripts/: run_baseline.py  run_hybrid.py  run_reflexion.py  run_tot.py
skills/: knowledge_retrieval.md  reflexion_guidelines.md  tot_search_strategy.md
src/: config.py
src/agents/: __init__.py  actor.py  evaluator.py  reflector.py  subagent_manager.py
src/hybrid/: reflexion_tot.py
src/memory/: __init__.py  episodic_store.py  file_store.py  reflection_retriever.py
src/reflexion/: loop.py  prompts.py
src/skills/: __init__.py  loader.py
src/tools/: __init__.py  nanobot_parallel.py  registry.py  rga_nanobot_tool.py  rga_search.py
src/tot/: bfs.py  dfs.py  evaluator.py  node.py  utils.py
src/workflow/: agno_workflow.py
tests/: test_episodic_store.py  test_file_store.py  test_nanobot_parallel.py  test_reflexion_loop.py  test_rga_search.py  test_skills_loader.py  test_subagent_manager.py  test_tool_registry.py  test_tot_bfs.py
