[project]
name = "reflexion-tot"
version = "0.1.0"
description = "Reflexion + Tree of Thoughts framework with nanobot + agno + ripgrep-all"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.0.0",
    "nanobot-ai>=0.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "litellm>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
